reformat code and cleanup