@@ -8,25 +8,21 @@
 
 package com.sierra.agi.pic;
 
-import java.awt.Point;
+import java.awt.*;
 import java.util.Vector;
 
-public abstract class PictureEntryMulti extends PictureEntry
-{
+public abstract class PictureEntryMulti extends PictureEntry {
     protected Vector points = new Vector();
 
-    public void add(int x, int y)
-    {
+    public void add(int x, int y) {
         points.add(new Point(x, y));
     }
-    
-    public void add(int c)
-    {
-        points.add(new Integer(c));
+
+    public void add(int c) {
+        points.add(Integer.valueOf(c));
     }
-    
-    public void add(int[] c)
-    {
+
+    public void add(int[] c) {
         points.add(c);
     }
 }
