@@ -1,25 +1,21 @@
-
 package com.sierra.jit;
 
-import java.util.*;
-import java.io.*;
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.util.Vector;
 
-public class ConstantPool extends Object
-{
+public class ConstantPool {
     protected Vector constants;
 
-    public ConstantPool()
-    {
+    public ConstantPool() {
         constants = new Vector();
         constants.add(new Object());
     }
 
-    protected int add(Object o)
-    {
+    protected int add(Object o) {
         int index = constants.indexOf(o);
 
-        if (index == -1)
-        {
+        if (index == -1) {
             index = constants.size();
             constants.add(o);
         }
@@ -27,13 +23,11 @@ public class ConstantPool extends Object
         return index;
     }
 
-    protected int addClass(String s)
-    {
-        String ns    = s.replace('.', '/');
-        int    index = constants.indexOf(ns);
+    protected int addClass(String s) {
+        String ns = s.replace('.', '/');
+        int index = constants.indexOf(ns);
 
-        if (index == -1)
-        {
+        if (index == -1) {
             index = constants.size();
             constants.add(ns);
         }
@@ -41,23 +35,19 @@ public class ConstantPool extends Object
         return index;
     }
 
-    public Object getObject(int index)
-    {
+    public Object getObject(int index) {
         return constants.get(index);
     }
 
-    public int getInteger(int integer)
-    {
-        return add(new Integer(integer));
+    public int getInteger(int integer) {
+        return add(Integer.valueOf(integer));
     }
 
-    public int getLong(long longint)
-    {
-        Long o     = new Long(longint);
-        int  index = constants.indexOf(o);
+    public int getLong(long longint) {
+        Long o = Long.valueOf(longint);
+        int index = constants.indexOf(o);
 
-        if (index == -1)
-        {
+        if (index == -1) {
             index = constants.size();
             constants.add(o);
             constants.add(null);
@@ -65,79 +55,62 @@ public class ConstantPool extends Object
 
         return index;
     }
- 
-    public int getUTF8(String str)
-    {
+
+    public int getUTF8(String str) {
         return add(str);
     }
 
-    public int getString(String str)
-    {
+    public int getString(String str) {
         return add(new ConstantString(add(str)));
     }
 
-    public int getClass(String str)
-    {
+    public int getClass(String str) {
         return add(new ConstantClass(addClass(str)));
     }
 
-    public int getNameAndType(String name, String type)
-    {
+    public int getNameAndType(String name, String type) {
         return add(new ConstantNameAndType(add(name), add(type)));
     }
 
-    public int getFieldRef(String className, String name, String type)
-    {
+    public int getFieldRef(String className, String name, String type) {
         return add(new ConstantField(add(new ConstantClass(addClass(className))),
-                                     add(new ConstantNameAndType(add(name), add(type)))));
+                add(new ConstantNameAndType(add(name), add(type)))));
     }
 
-    public int getMethodRef(String className, String name, String type)
-    {
+    public int getMethodRef(String className, String name, String type) {
         return add(new ConstantMethod(add(new ConstantClass(addClass(className))),
-                                      add(new ConstantNameAndType(add(name), add(type)))));
+                add(new ConstantNameAndType(add(name), add(type)))));
     }
 
-    public int getInterfaceMethodRef(String className, String name, String type)
-    {
+    public int getInterfaceMethodRef(String className, String name, String type) {
         return add(new ConstantInterfaceMethod(add(new ConstantClass(addClass(className))),
-                                               add(new ConstantNameAndType(add(name), add(type)))));
+                add(new ConstantNameAndType(add(name), add(type)))));
     }
 
-    public Object getContent(int index)
-    {
+    public Object getContent(int index) {
         return constants.get(index);
     }
 
-    public void compile(DataOutputStream outs) throws IOException
-    {
+    public void compile(DataOutputStream outs) throws IOException {
         int i, s = constants.size();
 
         outs.writeShort(s); // Constant Pool Count
 
-        for (i = 1; i < s; i++)
-        {
+        for (i = 1; i < s; i++) {
             Object o = constants.get(i);
 
-            if (o instanceof String)
-            {
+            if (o instanceof String) {
                 outs.write(1);
-                outs.writeUTF((String)o);
-            }
-            else if (o instanceof Integer)
-            {
+                outs.writeUTF((String) o);
+            } else if (o instanceof Integer) {
                 outs.write(3);
-                outs.writeInt(((Integer)o).intValue());
-            }
-            else if (o instanceof Long)
-            {
+                outs.writeInt(((Integer) o).intValue());
+            } else if (o instanceof Long) {
                 outs.write(5);
-                outs.writeLong(((Long)o).longValue());
+                outs.writeLong(((Long) o).longValue());
                 i++;
-            }
-            else if (o instanceof Constant)
-            {
-                ((Constant)o).compile(outs);
+            } else if (o instanceof Constant) {
+                ((Constant) o).compile(outs);
             }
         }
     }
